# aio-usb

./: pyproject.toml  try.py  try2.py
src/aio_usb/: __init__.py  ch9.py  class_codes.py  cli.py  control.py  descriptor.py  device.py  discovery.py  interface.py  pipe.py
src/aio_usb/backend/: __init__.py  device.py  interface.py  monitor.py  pipe.py  provider.py
src/aio_usb/backend/linux/: __init__.py
src/aio_usb/backend/linux/lib/linux/: ioctl.py  usbdevice_fs.py
src/aio_usb/backend/linux/lib/linux/usb/: ch9.py
src/aio_usb/backend/linux/lib/udev/: __init__.py  _context.py  _device.py  _enumerate.py  _lib.py  _list_entry.py  _monitor.py
src/aio_usb/backend/rubicon_objc/: __init__.py  core_foundation.py  foundation.py  foundation.pyi  io_usb_host.py  io_usb_host.pyi  runtime.py
src/aio_usb/backend/rubicon_objc/dispatch/: __init__.py  _object.py  _queue.py
src/aio_usb/backend/rubicon_objc/io_kit/: __init__.py  _driver_kit.py  _io_kit_keys.py  _iterator.py  _kernel.py  _notification_port.py  _object.py  _registry.py  _return.py  _runtime.py  _service.py
src/aio_usb/backend/rubicon_objc/io_kit/usb/: apple_usb_definitions.py
src/aio_usb/backend/winrt/: __init__.py
typings/rubicon/objc/: api.pyi  collections.pyi  types.pyi
